# shadow-zip

./: .gitignore  CLI_DESIGN.md  CLI_DEVELOPMENT_TASKS.md  CLI_TEST_CASES.md  Cargo.toml  FORMAT_SUPPORT_IMPLEMENTATION_PLAN.md  README.md
archive-gpui-product-docs/: 01-product-requirements.md  02-technical-architecture.md  04-implementation-roadmap.md  05-sources-and-assumptions.md  06-ux-interaction-spec.md  07-api-and-data-model.md  08-distribution-licensing-operations.md  README.md
archive-product-docs/: 02-technical-architecture.md  03-format-support-matrix.md  04-implementation-roadmap.md  05-sources-and-assumptions.md  08-distribution-licensing-operations.md  09-bandizip-format-gap-checklist.md  README.md
crates/app/: Cargo.toml
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/app/src/: main.rs
crates/archive-7z/: Cargo.toml
crates/archive-7z/src/: lib.rs
crates/archive-containers/: Cargo.toml
crates/archive-containers/src/: lib.rs
crates/archive-core/: Cargo.toml
crates/archive-core/src/: lib.rs
crates/archive-core/tests/: product_flows.rs
crates/archive-encoded/: Cargo.toml
crates/archive-encoded/src/: lib.rs
crates/archive-images/: Cargo.toml
crates/archive-images/src/: lib.rs
crates/archive-legacy/: Cargo.toml
crates/archive-legacy/src/: lib.rs
crates/archive-libarchive/: Cargo.toml
crates/archive-libarchive/src/: lib.rs
crates/archive-rar/: Cargo.toml
crates/archive-rar/src/: lib.rs
crates/archive-stream/: Cargo.toml
crates/archive-stream/src/: lib.rs
crates/archive-tar/: Cargo.toml
crates/archive-tar/src/: lib.rs
crates/archive-zip/: Cargo.toml
crates/archive-zip/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: e2e.rs  fixtures.rs
crates/domain/: Cargo.toml
crates/domain/src/: archive.rs  config.rs  error.rs  lib.rs  security.rs  task.rs  ui.rs  workflow.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/preview/: Cargo.toml
crates/preview/src/: lib.rs
crates/task-engine/: Cargo.toml
crates/task-engine/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
packaging/linux/: dev.shadowzip.ShadowZip.desktop
packaging/macos/: Info.plist
packaging/windows/: shadow-zip.wxs
