[package]
name = "shadow-zip"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
uuid.workspace = true
shadow-zip-app-core.workspace = true
shadow-zip-domain.workspace = true
shadow-zip-i18n.workspace = true
shadow-zip-platform.workspace = true
shadow-zip-ui.workspace = true

[lints]
workspace = true
