[package]
name = "shadow-zip-archive-encoded"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
shadow-zip-archive-core.workspace = true
shadow-zip-domain.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
