[package]
name = "shadow-zip-archive-legacy"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
delharc = { version = "0.6.1", features = ["lh1", "lhx", "lz", "std"] }
fs-err.workspace = true
shadow-zip-archive-core.workspace = true
shadow-zip-domain.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
