[package]
name = "shadow-zip-archive-stream"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
brotli.workspace = true
bzip2.workspace = true
flate2.workspace = true
fs-err.workspace = true
lz4_flex.workspace = true
shadow-zip-archive-core.workspace = true
shadow-zip-domain.workspace = true
tar.workspace = true
xz2.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
