[package]
name = "shadow-zip-cache"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
shadow-zip-domain.workspace = true
chrono.workspace = true
fs-err.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
