[package]
name = "shadow-zip-domain"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
bitflags.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
