[package]
name = "shadow-zip-preview"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
chardetng.workspace = true
encoding_rs.workspace = true
fast_image_resize.workspace = true
image.workspace = true
shadow-zip-archive-core.workspace = true
shadow-zip-domain.workspace = true
uuid.workspace = true

[lints]
workspace = true
